# summon-shopper

./: .gitignore  BOOTSTRAP.md  CARTS.md  CLAUDE.md  Cargo.toml  NIX.md  PROFILESSETUP.md  README.md  SCANNER.md  SIGNALS.md  flake.nix  full_scanner_logs.txt  package-lock.json  package.json  tauri_scanner_logs.txt
.github/workflows/: release-tauri-app.yaml
dnas/cart/workdir/: dna.yaml
dnas/cart/zomes/coordinator/cart/: Cargo.toml
dnas/cart/zomes/coordinator/cart/src/: lib.rs
dnas/cart/zomes/integrity/cart/: Cargo.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: package.json
ui/: package.json  vite.config.ts  vite.config.ts.timestamp-1751664493317-e59e5864b6ed2.mjs
ui/src/: App.svelte  ClientProvider.svelte  app.css  contexts.ts  main.ts
ui/src/cart/cart/: types.ts
ui/src/cart/components/: BarcodeScanner.svelte  TauriBarcodeScanner.svelte
ui/src/cart/orders/components/: OrderCard.svelte  OrderDetailView.svelte  OrderProductList.svelte  OrdersView.svelte  ProductDetail.svelte
ui/src/cart/services/: CartCloneService.ts  OrderFinderService.ts  OrdersService.ts
ui/src/cart/types/: CartTypes.ts
ui/src/cart/utils/: errorHelpers.ts  recordDecoders.ts  zomeHelpers.ts
ui/src/profile/: types.ts
ui/src/profile/components/: ProfileEditor.svelte
ui/src/profile/services/: ProfileService.ts
ui/src/signals/: CartClient.ts  SignalService.ts  index.ts  scanStatus.ts  sendSignal.ts  types.ts  utils.ts
ui/src/signals/components/: ScanStatusIcon.svelte
ui/src/signals/stores/: cartSignalStore.ts  peerStore.ts
workdir/: happ.yaml  web-happ.yaml
