[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
  "src-tauri",
  "dnas/cart/zomes/coordinator/cart",
  "dnas/cart/zomes/integrity/cart"
]
resolver = "2"

[workspace.dependencies]
hdi = "=0.6.3"
hdk = "=0.5.3"
holochain_serialized_bytes = "*"
holochain_types = "0.3.2"
mio = "0.8"
serde = "1.0"

[workspace.dependencies.cart]
path = "dnas/cart/zomes/coordinator/cart"

[workspace.dependencies.cart_integrity]
path = "dnas/cart/zomes/integrity/cart"

[workspace.dependencies.tokio]
features = ["full"]
version = "1.0"